--- a/bpipe.config
+++ b/bpipe.config
@@ -5,6 +5,7 @@ walltime="08:00:00"
 memory="8"
 jobtype="single"
 queue="main"
+modules="bowtie2-intel/2.2.1"
 
 // Command specific configuration
 commands {
